# vanilla-control-center

./: .gitignore  README.md  install.sh  meson.build
data/: meson.build  org.vanillaos.ControlCenter.appdata.xml.in  org.vanillaos.ControlCenter.desktop.in  org.vanillaos.ControlCenter.gschema.xml
data/icons/: meson.build
debian/: changelog  control  copyright
help/: LINGUAS  README.md  meson.build  vanilla-control-center-help.pot
help/C/: drivers-install.page  drivers-not-available.page  index.page  legal.xml  prime-profiles.page  subsystem-containers.page  subsystem-installed.page  update-automatic.page  update-check.page  update-scheduling.page  update-smart.page  update-system.page
help/ar/: ar.po
help/bg/: bg.po
help/bn/: bn.po
help/ca/: ca.po
help/cs/: cs.po
help/da/: da.po
help/de/: de.po
help/el/: el.po
help/eo/: eo.po
help/es/: es.mo  es.po
help/et/: et.po
help/eu/: eu.po
help/fa/: fa.po
help/fi/: fi.po
help/fr/: fr.po
help/gl/: gl.po
help/hi/: hi.po
help/hr/: hr.po
help/hu/: hu.po
help/id/: id.po
help/it/: it.po
help/ja/: ja.po
help/ko/: ko.po
help/lt/: lt.po
help/ms/: ms.po
help/nb/: nb.po
help/nl/: nl.po
help/pl/: pl.po
help/pt/: pt.po
help/ro/: ro.po
help/ru/: ru.po
help/sk/: sk.po
help/sl/: sl.po
help/sr/: sr.po
help/sv/: sv.po
help/ta/: ta.mo  ta.po
help/th/: th.po
help/tr/: tr.po
help/uk/: uk.po
help/vi/: vi.po
help/zh/: zh.po
po/: LINGUAS  POTFILES  ab.po  af.po  am.po  an.po  ar.po  ar_MA.po  arn.po  as.po  ast.po  az.po  be.po  bg.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ckb.po  co.po  crh.po  cs.po  csb.po  cv.po  cy.po  da.po  de.po  dv.po  el.po  en_AU.po  en_CA.po  en_GB.po  en_US.po  eo.po  es.po  et.po  eu.po  (+106 more)
src/: almost.py  apx.py  container.py  dialog_installation.py  driver.py  main.py  meson.build  program.py  run_async.py  ubuntu_drivers.py  vanilla-control-center.gresource.xml  vanilla-control-center.in  vso.py  window.py
src/gtk/: dialog-installation.ui  driver.ui  window.ui
vanilla_control_center/: container.py  dialog_installation.py  dialog_update_check.py  driver.py  main.py  meson.build  program.py  run_async.py  vanilla-control-center.gresource.xml  vanilla-control-center.in  window.py
vanilla_control_center/backends/: apx.py  exceptions.py  meson.build  prime_profiles.py  ubuntu_drivers.py  vso.py
vanilla_control_center/gtk/: container.ui  dialog-installation.ui  dialog-update-check.ui  program.ui  window.ui
