pages = [
  'index.page',
  'drivers-install.page',
  'drivers-not-available.page',
  'update-check.page',
  'update-scheduling.page',
  'update-smart.page',
  'subsystem-containers.page',
  'subsystem-installed.page',
  'legal.xml',
]

media = [
  'media/vanilla-control-center.png',
  'media/vanilla-control-center-apply.png',
  'media/vanilla-control-center-installation.png',
  'media/vanilla-control-center-update.png',
  'media/vanilla-control-center-subsystem.png',
  'media/vanilla-control-center-subsystem-enter.png',
]

gnome.yelp(meson.project_name(),
  sources: pages,
  media: media,
)
